Introduce a new break point to ensure home banner image is not cut off at that particular width
https://github.com/elifesciences/enhanced-preprints-issues/issues/1281

--- a/assets/sass/patterns/molecules/home-banner.scss
+++ b/assets/sass/patterns/molecules/home-banner.scss
@@ -16,6 +16,10 @@
     --banner-default-min-height: calc(465px - var(--subjects-height));
   }
 
+  @media only screen and (min-width: #{get-rem-from-px($bkpt-site--home-hero-banner-additional-wider)}em) {
+    --banner-default-min-height: calc(553px - var(--subjects-height));
+  }
+
   --site-header-height: 95px;
 
   @media only screen and (min-width: #{get-rem-from-px($bkpt-site--wide)}em) {
